--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,12 @@
 {
     "version": 2,
-    "builds": [
-       { "src": "*.js", "use": "@vercel/node" }
-    ],
     "routes": [
-       { "src": "/(.*)", "dest": "/" }
-    ]
- }
+      {
+        "src": "/api/(.*)",
+        "dest": "/api/index.js"
+      }
+    ],
+    "env": {
+      "MONGODB_URI": "@mongodb_uri"
+    }
+  }
